--- a/.github/workflows/upper-build.yml
+++ b/.github/workflows/upper-build.yml
@@ -15,11 +15,12 @@ jobs:
     #   - uses: actions/checkout@v4
     #   - run: pwd && ls -al
         - run: go version
-    #   - uses: actions/setup-go@v5
-    #     with:
-           # go-version: '1.22'
-    #       go-version-file: ./upper/go.mod
-    #       cache-dependency-path: ./upper/go.sum
+        - uses: actions/setup-go@v5
+          with:
+            go-version: '1.22'
+            go-version-file: ./upper/go.mod
+            cache-dependency-path: ./upper/go.sum
+        - run: go version
     #   - run: go mod download
     #     working-directory: upper
     #   - run: |
