--- a/.github/workflows/upper-build.yml
+++ b/.github/workflows/upper-build.yml
@@ -11,16 +11,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    #   - run: pwd && ls -al
-    #   - uses: actions/checkout@v4
-    #   - run: pwd && ls -al
-        - run: go version
-        - uses: actions/setup-go@v5
-          with:
+      - run: pwd && ls -al
+      - uses: actions/checkout@v4
+      - run: pwd && ls -al
+      - run: go version
+      - uses: actions/setup-go@v5
+        with:
             go-version: '1.22'
             go-version-file: ./upper/go.mod
             cache-dependency-path: ./upper/go.sum
-        - run: go version
+      - run: go version
     #   - run: go mod download
     #     working-directory: upper
     #   - run: |
