--- a/.github/workflows/upper-build.yml
+++ b/.github/workflows/upper-build.yml
@@ -17,9 +17,9 @@ jobs:
       - run: go version
       - uses: actions/setup-go@v5
         with:
-            go-version: '1.22'
-            # go-version-file: ./upper/go.mod
-            # cache-dependency-path: ./upper/go.sum
+            # go-version: '1.22'
+            go-version-file: ./upper/go.mod
+            cache-dependency-path: ./upper/go.sum
       - run: go version
     #   - run: go mod download
     #     working-directory: upper
