--- a/.github/workflows/upper-build.yml
+++ b/.github/workflows/upper-build.yml
@@ -20,9 +20,9 @@ jobs:
             # go-version: '1.22'
             go-version-file: ./upper/go.mod
             cache-dependency-path: ./upper/go.sum
-      - run: go version
-    #   - run: go mod download
-    #     working-directory: upper
+    #   - run: go version
+      - run: go mod download
+        working-directory: upper
       - run: |
           ls
           go build
